okf/products/scalardl/3.10/index.md
---
type: Product Version
title: ScalarDL 3.10
description: Documentation set for ScalarDL 3.10 (newest patch 3.10.5).
resource: https://scalardl.scalar-labs.com/docs/3.10/
tags:
- scalardl
- v3.10
- product-version
- unmaintained
status: deprecated
product: scalardl
product_title: ScalarDL
version: '3.10'
patch_version: 3.10.5
url_path: '3.10'
maintenance: unmaintained
is_latest: false
concept_count: 132
generated:
  by: process:okf-build/1.0.0
  at: '2026-08-24T00:15:46Z'
sources:
- id: docs-scalardl
  resource: https://github.com/scalar-labs/docs-scalardl/tree/db1535c35d0f746c5b5d8d9772f54afa0c709a34
  title: ScalarDL documentation repository
  author: process:scalar-labs/docs-scalardl
  last_modified: '2026-08-20T15:35:18Z'
---

# ScalarDL 3.10

**Unmaintained release.** Prefer a supported version for new work; kept here for systems still running it.

| | |
|---|---|
| Product | ScalarDL |
| Documentation version | 3.10 |
| Newest patch release described | 3.10.5 |
| Docs site | https://scalardl.scalar-labs.com/docs/3.10/ |
| Upstream source | https://github.com/scalar-labs/docs-scalardl @ `db1535c35d0f` |
| Concepts in this version | 132 |

## By lifecycle phase

Start here when you know which phase of the project you are in.

### 設計 / Design (9)

- [Glossary](./glossary.md)
- [Requirements](./requirements.md)
- [ScalarDL Design Document](./design.md)
- [ScalarDL Implementation](./implementation.md)
- [ScalarDL Learning Paths](./learning-paths.md)
- [ScalarDL Overview](./overview.md)
- [ScalarDL Roadmap](./roadmap.md)
- [Release Support Policy](./releases/release-support-policy.md)
- [ScalarDL 3.10 Release Notes](./releases/release-notes.md)

### 実装 / Implement (32)

- [A Guide on How to Write a Good Contract for ScalarDL](./how-to-write-contract.md)
- [A Guide on How to Write Function for ScalarDL](./how-to-write-function.md)
- [Advanced Configurations and Operations Overview](./develop-advanced-configurations-overview.md)
- [Develop Overview](./develop-overview.md)
- [Generic Contracts and Functions Reference Guide](./generic-contracts-reference.md)
- [Get Started with ScalarDL Ledger](./getting-started.md)
- [Libraries and Tools for ScalarDL](./libraries-and-tools.md)
- [Manage the Contract and Function Lifecycle](./manage-contract-and-function-lifecycle.md)
- [Model Your Data](./data-modeling.md)
- [Quickstart Overview](./quickstart-overview.md)
- [Run a ScalarDL Application Through ScalarDL Ledger](./how-to-run-applications.md)
- [Run a ScalarDL Application Through ScalarDL Ledger and Auditor](./how-to-run-applications-with-auditor.md)
- [Run an Application Overview](./develop-run-an-application-overview.md)
- [Run Sample Applications Overview](./develop-samples-overview.md)
- [ScalarDL Authentication Guide](./authentication.md)
- [ScalarDL Client Command Reference](./scalardl-command-reference.md)
- [ScalarDL Compatibility Matrix](./compatibility.md)
- [ScalarDL Configurations](./configurations.md)
- [ScalarDL Schema Loader](./schema-loader.md)
- [Use Generic Contracts and Functions](./use-generic-contracts.md)
- [Write a ScalarDL Application in Java](./how-to-write-applications.md)
- [Write a ScalarDL Application with Generic Contracts](./how-to-write-applications-with-generic-contracts.md)
- [Write an Application Overview](./develop-write-an-application-overview.md)
- [Write Business Logic Overview](./develop-write-business-logic-overview.md)
- [A simple bank account application](./applications/simple-bank-account/README.md)
- [API endpoints](./applications/simple-bank-account/docs/api_endpoints.md)
- [How to Get a Certificate](./ca/caclient-getting-started.md)
- [ScalarDL Javadoc](./javadoc/section-home.md)
- [How to Configure a Commercial License Key](./scalar-licensing/commercial.md)
- [How to Configure a License Key](./scalar-licensing/section-home.md)
- [How to Configure a Trial License Key](./scalar-licensing/trial.md)
- [ScalarDL Benchmarking Tools](./scalardl-benchmarks/README.md)

### 運用 / Operate (91)

- [A Guide on How to Backup and Restore Data in ScalarDL](./backup-restore.md)
- [Back Up and Restore Databases](./manage-backup-and-restore-overview.md)
- [Deploy Overview](./deploy-overview.md)
- [Deploy ScalarDL in a Cloud-Based Kubernetes Environment](./deploy-managed-kubernetes-environment-overview.md)
- [Deploy ScalarDL in Your Local Kubernetes Environment](./deploy-local-environment-overview.md)
- [How to Install ScalarDL in Your Local Environment with Docker](./installation-with-docker.md)
- [Manage Overview](./manage-overview.md)
- [Monitor Overview](./manage-monitor-overview.md)
- [ScalarDL Auditor Error Codes](./scalardl-auditor-status-codes.md)
- [ScalarDL Client Error Codes](./scalardl-client-status-codes.md)
- [ScalarDL Common Error Codes](./scalardl-common-status-codes.md)
- [ScalarDL Ledger Error Codes](./scalardl-ledger-status-codes.md)
- [How to start CA server with CFSSL](./ca/caserver-getting-started.md)
- [[Deprecated] Configure a custom values file for ScalarDB GraphQL](./helm-charts/configure-custom-values-scalardb-graphql.md)
- [[Deprecated] Configure a custom values file for ScalarDB Server](./helm-charts/configure-custom-values-scalardb.md)
- [[Deprecated] Getting Started with Helm Charts (ScalarDB Server)](./helm-charts/getting-started-scalardb.md)
- [[Deprecated] How to deploy ScalarDB GraphQL](./helm-charts/how-to-deploy-scalardb-graphql.md)
- [[Deprecated] How to deploy ScalarDB Server](./helm-charts/how-to-deploy-scalardb.md)
- [Configure a custom values file for Scalar Admin for Kubernetes](./helm-charts/configure-custom-values-scalar-admin-for-kubernetes.md)
- [Configure a custom values file for Scalar Envoy](./helm-charts/configure-custom-values-envoy.md)
- [Configure a custom values file for Scalar Helm Charts](./helm-charts/configure-custom-values-file.md)
- [Configure a Custom Values File for Scalar Manager](./helm-charts/configure-custom-values-scalar-manager.md)
- [Configure a custom values file for ScalarDB Analytics server](./helm-charts/configure-custom-values-scalardb-analytics-server.md)
- [Configure a custom values file for ScalarDB Cluster](./helm-charts/configure-custom-values-scalardb-cluster.md)
- [Configure a custom values file for ScalarDL Auditor](./helm-charts/configure-custom-values-scalardl-auditor.md)
- [Configure a custom values file for ScalarDL Ledger](./helm-charts/configure-custom-values-scalardl-ledger.md)
- [Configure a custom values file for ScalarDL Schema Loader](./helm-charts/configure-custom-values-scalardl-schema-loader.md)
- [Deploy Scalar Manager](./helm-charts/getting-started-scalar-manager.md)
- [Deploy Scalar products using Scalar Helm Charts](./helm-charts/how-to-deploy-scalar-products.md)
- [Getting Started with Helm Charts (Logging using Loki Stack)](./helm-charts/getting-started-logging.md)
- [Getting Started with Helm Charts (Monitoring using Prometheus Operator)](./helm-charts/getting-started-monitoring.md)
- [Getting Started with Helm Charts (ScalarDB Cluster with TLS by Using cert-manager)](./helm-charts/getting-started-scalardb-cluster-tls-cert-manager.md)
- [Getting Started with Helm Charts (ScalarDB Cluster with TLS)](./helm-charts/getting-started-scalardb-cluster-tls.md)
- [Getting Started with Helm Charts (ScalarDL Ledger / Ledger only)](./helm-charts/getting-started-scalardl-ledger.md)
- [Getting Started with Helm Charts (ScalarDL Ledger and Auditor / Auditor mode)](./helm-charts/getting-started-scalardl-auditor.md)
- [Getting Started with Helm Charts (ScalarDL Ledger and Auditor with TLS / Auditor Mode)](./helm-charts/getting-started-scalardl-auditor-tls.md)
- [Getting Started with Helm Charts (ScalarDL Ledger and Auditor with TLS by Using cert-manager / Auditor Mode)](./helm-charts/getting-started-scalardl-auditor-tls-cert-manager.md)
- [Getting Started with Scalar Helm Charts](./helm-charts/getting-started-scalar-helm-charts.md)
- [How to deploy Scalar Admin for Kubernetes](./helm-charts/how-to-deploy-scalar-admin-for-kubernetes.md)
- [How to deploy ScalarDB Cluster](./helm-charts/how-to-deploy-scalardb-cluster.md)
- [How to deploy ScalarDL Auditor](./helm-charts/how-to-deploy-scalardl-auditor.md)
- [How to deploy ScalarDL Ledger](./helm-charts/how-to-deploy-scalardl-ledger.md)
- [How to use Secret resources to pass credentials as environment variables into the properties file](./helm-charts/use-secret-for-credentials.md)
- [Mount any files or volumes on Scalar product pods](./helm-charts/mount-files-or-volumes-on-scalar-pods.md)
- [(Deprecated) Guidelines for creating an EKS cluster for ScalarDB Server](./scalar-kubernetes/CreateEKSClusterForScalarDB.md)
- [[Deprecated] Deploy ScalarDB Server on Azure Kubernetes Service (AKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDBServerOnAKS.md)
- [Back up a NoSQL database in a Kubernetes environment](./scalar-kubernetes/BackupNoSQL.md)
- [Back up an RDB in a Kubernetes environment](./scalar-kubernetes/BackupRDB.md)
- [Back up and restore ScalarDB or ScalarDL data in a Kubernetes environment](./scalar-kubernetes/BackupRestoreGuide.md)
- [Collecting logs from Scalar products on a Kubernetes cluster](./scalar-kubernetes/K8sLogCollectionGuide.md)
- [Components to Regularly Check When Running in a Kubernetes Environment](./scalar-kubernetes/RegularCheck.md)
- [Configure Network Peering for ScalarDL Auditor Mode](./scalar-kubernetes/NetworkPeeringForScalarDLAuditor.md)
- [Create a bastion server](./scalar-kubernetes/CreateBastionServer.md)
- [Deploy ScalarDB Cluster on Amazon Elastic Kubernetes Service (EKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDBClusterOnEKS.md)
- [Deploy ScalarDB Server on Amazon Elastic Kubernetes Service (EKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDBServerOnEKS.md)
- [Deploy ScalarDL Ledger and ScalarDL Auditor on Amazon Elastic Kubernetes Service (EKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDLAuditorOnEKS.md)
- [Deploy ScalarDL Ledger and ScalarDL Auditor on Azure Kubernetes Service (AKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDLAuditorOnAKS.md)
- [Deploy ScalarDL Ledger on Amazon Elastic Kubernetes Service (EKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDLOnEKS.md)
- [Deploy ScalarDL Ledger on Azure Kubernetes Service (AKS)](./scalar-kubernetes/ManualDeploymentGuideScalarDLOnAKS.md)
- [Guidelines for creating an AKS cluster for Scalar products](./scalar-kubernetes/CreateAKSClusterForScalarProducts.md)
- [Guidelines for creating an AKS cluster for ScalarDB Server](./scalar-kubernetes/CreateAKSClusterForScalarDB.md)
- [Guidelines for creating an AKS cluster for ScalarDL Ledger](./scalar-kubernetes/CreateAKSClusterForScalarDL.md)
- [Guidelines for creating an AKS cluster for ScalarDL Ledger and ScalarDL Auditor](./scalar-kubernetes/CreateAKSClusterForScalarDLAuditor.md)
- [Guidelines for creating an Amazon EKS cluster for Scalar products](./scalar-kubernetes/CreateEKSClusterForScalarProducts.md)
- [Guidelines for creating an EKS cluster for ScalarDB Cluster](./scalar-kubernetes/CreateEKSClusterForScalarDBCluster.md)
- [Guidelines for creating an EKS cluster for ScalarDL Ledger](./scalar-kubernetes/CreateEKSClusterForScalarDL.md)
- [Guidelines for creating an EKS cluster for ScalarDL Ledger and ScalarDL Auditor](./scalar-kubernetes/CreateEKSClusterForScalarDLAuditor.md)
- [How to Create Private Key and Certificate Files for TLS Connections in Scalar Products](./scalar-kubernetes/HowToCreateKeyAndCertificateFiles.md)
- [How to get the container images of Scalar products](./scalar-kubernetes/HowToGetContainerImages.md)
- [How to install Scalar products through AWS Marketplace](./scalar-kubernetes/AwsMarketplaceGuide.md)
- [How to Scale ScalarDB Cluster](./scalar-kubernetes/HowToScaleScalarDB.md)
- [How to Scale ScalarDL](./scalar-kubernetes/HowToScaleScalarDL.md)
- [How to Upgrade ScalarDB](./scalar-kubernetes/HowToUpgradeScalarDB.md)
- [How to Upgrade ScalarDL](./scalar-kubernetes/HowToUpgradeScalarDL.md)
- [How to use the container images](./scalar-kubernetes/HowToUseContainerImages.md)
- [Make ScalarDB or ScalarDL deployed in a Kubernetes cluster environment available from applications](./scalar-kubernetes/AccessScalarProducts.md)
- [Monitoring Scalar products on a Kubernetes cluster](./scalar-kubernetes/K8sMonitorGuide.md)
- [Production checklist for Scalar products](./scalar-kubernetes/ProductionChecklistForScalarProducts.md)
- [Production checklist for ScalarDB Cluster](./scalar-kubernetes/ProductionChecklistForScalarDBCluster.md)
- [Production checklist for ScalarDL Auditor](./scalar-kubernetes/ProductionChecklistForScalarDLAuditor.md)
- [Production checklist for ScalarDL Ledger](./scalar-kubernetes/ProductionChecklistForScalarDLLedger.md)
- [Restore databases in a Kubernetes environment](./scalar-kubernetes/RestoreDatabase.md)
- [Set up a database for ScalarDB/ScalarDL deployment](./scalar-kubernetes/SetupDatabase.md)
- [Set up a database for ScalarDB/ScalarDL deployment on AWS](./scalar-kubernetes/SetupDatabaseForAWS.md)
- [Set up a database for ScalarDB/ScalarDL deployment on Azure](./scalar-kubernetes/SetupDatabaseForAzure.md)
- [Envoy Alerts](./scalar-kubernetes/alerts/Envoy.md)
- [Ledger Alerts](./scalar-kubernetes/alerts/Ledger.md)
- [Scalar Alerts](./scalar-kubernetes/alerts/README.md)
- [How to Use Scalar Manager](./scalar-manager/how-to-use-scalar-manager.md)
- [Scalar Manager Metrics Reference](./scalar-manager/metrics-reference.md)
- [Scalar Manager Overview](./scalar-manager/overview.md)

## Sections

- [applications](./applications/index.md)
- [ca](./ca/index.md)
- [helm-charts](./helm-charts/index.md)
- [javadoc](./javadoc/index.md)
- [releases](./releases/index.md)
- [scalar-kubernetes](./scalar-kubernetes/index.md)
- [scalar-licensing](./scalar-licensing/index.md)
- [scalar-manager](./scalar-manager/index.md)
- [scalardl-benchmarks](./scalardl-benchmarks/index.md)

## Top-level concepts

- [A Guide on How to Backup and Restore Data in ScalarDL](./backup-restore.md) — Since ScalarDL uses ScalarDB that provides transaction capability on top of non-transactional (possibly transactional) databases non-invasively, you need to take special care of backing up and restoring the databases in a...
- [A Guide on How to Write a Good Contract for ScalarDL](./how-to-write-contract.md) — This document sets out some guidelines for writing contracts for ScalarDL.
- [A Guide on How to Write Function for ScalarDL](./how-to-write-function.md) — This document sets out some guidelines for writing functions for ScalarDL.
- [Advanced Configurations and Operations Overview](./develop-advanced-configurations-overview.md) — In this sub-category, you can learn how to set advanced configurations and perform advanced operations for ScalarDL.
- [Back Up and Restore Databases](./manage-backup-and-restore-overview.md) — This guide explains how to back up and restore databases that are used by ScalarDL through ScalarDB.
- [Deploy Overview](./deploy-overview.md) — In this category, you can follow guides to help you become more familiar with deploying ScalarDL in local and cloud-based Kubernetes environments.
- [Deploy ScalarDL in a Cloud-Based Kubernetes Environment](./deploy-managed-kubernetes-environment-overview.md) — In this sub-category, you can follow guides to help you become more familiar with deploying ScalarDL in managed, cloud-based Kubernetes environments by using Helm Charts.
- [Deploy ScalarDL in Your Local Kubernetes Environment](./deploy-local-environment-overview.md) — In this sub-category, you can follow guides to help you become more familiar with deploying ScalarDL in your local Kubernetes environment by using Helm Charts.
- [Develop Overview](./develop-overview.md) — In this category, you can follow guides to help you become more familiar with ScalarDL, specifically with how to write and run ScalarDL applications.
- [Generic Contracts and Functions Reference Guide](./generic-contracts-reference.md) — Although generic contracts were introduced in ScalarDL 3.10, HashStore, released in ScalarDL 3.12, provides a higher-level abstraction that wraps generic contracts. For most use cases, using HashStore is simpler and more efficient than...
- [Get Started with ScalarDL Ledger](./getting-started.md) — This getting started tutorial explains how to configure ScalarDL on your preferred database and illustrates the process of creating a simple application where the historical states of data are traced.
- [Glossary](./glossary.md) — This glossary includes terms that are often used when using ScalarDL.
- [How to Install ScalarDL in Your Local Environment with Docker](./installation-with-docker.md) — This document shows how to set up a local environment that runs ScalarDL along with the back-end Cassandra server using Docker Compose.
- [Libraries and Tools for ScalarDL](./libraries-and-tools.md) — ScalarDL provides various libraries and tools to help you build and operate scalable and reliable applications. Below are some key libraries and tools available.
- [Manage Overview](./manage-overview.md) — In this category, you can follow guides to help you manage ScalarDL.
- [Manage the Contract and Function Lifecycle](./manage-contract-and-function-lifecycle.md) — This document explains the lifecycle of contracts and functions in ScalarDL—from creating and registering them to updating them when bug fixes or feature additions are needed.
- [Model Your Data](./data-modeling.md) — Data modeling (or in other words, organizing your data) is the process of conceptualizing and visualizing how data will be stored and used by identifying the patterns used to access data and the types of queries to be performed within...
- [Monitor Overview](./manage-monitor-overview.md) — Scalar Manager is a centralized management and monitoring solution for ScalarDL within Kubernetes cluster environments that allows you to:
- [Quickstart Overview](./quickstart-overview.md) — In this category, you can follow quickstart tutorials for how to get started with running a basic contract through ScalarDL Ledger by using the Java Client SDK.
- [Requirements](./requirements.md) — This page describes the required tools and their versions to use ScalarDL correctly.
- [Run a ScalarDL Application Through ScalarDL Ledger](./how-to-run-applications.md) — This guide explains how to run a ScalarDL application through ScalarDL Ledger. This document assumes that you have already tried the Get Started with ScalarDL Ledger tutorial and created your application that integrates ScalarDL by using...
- [Run a ScalarDL Application Through ScalarDL Ledger and Auditor](./how-to-run-applications-with-auditor.md) — This guide explains how to run a ScalarDL application through ScalarDL Ledger and Auditor. This document assumes that you have already tried the Get Started with ScalarDL Ledger tutorial and created your application that integrates...
- [Run an Application Overview](./develop-run-an-application-overview.md) — In this sub-category, you can learn how to run an application through ScalarDL.
- [Run Sample Applications Overview](./develop-samples-overview.md) — In this sub-category, you can learn how to run sample applications that take advantage of ScalarDL.
- [ScalarDL Auditor Error Codes](./scalardl-auditor-status-codes.md) — This page provides a list of error codes in ScalarDL Auditor.
- [ScalarDL Authentication Guide](./authentication.md) — This document explains the ScalarDL authentication mechanism and how to use it properly.
- [ScalarDL Client Command Reference](./scalardl-command-reference.md) — This page introduces scalardl, which is a client command for interacting with ScalarDL components.
- [ScalarDL Client Error Codes](./scalardl-client-status-codes.md) — This page provides a list of error codes in ScalarDL clients.
- [ScalarDL Common Error Codes](./scalardl-common-status-codes.md) — This page provides a list of error codes common across ScalarDL.
- [ScalarDL Compatibility Matrix](./compatibility.md) — This document shows the compatibility of ScalarDL Ledger and Auditor versions among ScalarDL Java Client SDK versions and ScalarDB Cluster.
- [ScalarDL Configurations](./configurations.md) — This page describes the following available configurations for ScalarDL:
- [ScalarDL Design Document](./design.md) — This design document briefly explains the design and implementation of ScalarDL. For the background and objectives of ScalarDL, see ScalarDL Overview.
- [ScalarDL Implementation](./implementation.md) — ScalarDL is scalable and practical Byzantine fault detection middleware for transactional database systems, which achieves correctness, scalability, and database agnosticism. This document briefly introduces the implementation of ScalarDL....
- [ScalarDL Learning Paths](./learning-paths.md) — This guide provides learning paths for different roles. Depending on your role, follow the appropriate sequence of documents to gain a comprehensive understanding of ScalarDL.
- [ScalarDL Ledger Error Codes](./scalardl-ledger-status-codes.md) — This page provides a list of error codes in ScalarDL Ledger.
- [ScalarDL Overview](./overview.md) — This page describes what ScalarDL is and its primary use cases.
- [ScalarDL Roadmap](./roadmap.md) — This roadmap provides a look into the proposed future of ScalarDL. The purpose of this roadmap is to provide visibility into what changes may be coming so that you can more closely follow progress, learn about key milestones, and give...
- [ScalarDL Schema Loader](./schema-loader.md) — A Docker image that loads the database schemas of ScalarDL using Schema Tool for ScalarDB.
- [Use Generic Contracts and Functions](./use-generic-contracts.md) — Although generic contracts were introduced in ScalarDL 3.10, HashStore, released in ScalarDL 3.12, provides a higher-level abstraction that wraps generic contracts. For most use cases, using HashStore is simpler and more efficient than...
- [Write a ScalarDL Application in Java](./how-to-write-applications.md) — This document explains how to write ScalarDL applications. You will learn how to integrate ScalarDL into your applications, handle errors, and validate your data.
- [Write a ScalarDL Application with Generic Contracts](./how-to-write-applications-with-generic-contracts.md) — Although generic contracts were introduced in ScalarDL 3.10, HashStore, released in ScalarDL 3.12, provides a higher-level abstraction that wraps generic contracts. For most use cases, using HashStore is simpler and more efficient than...
- [Write an Application Overview](./develop-write-an-application-overview.md) — In this sub-category, you can learn how to write a ScalarDL application.
- [Write Business Logic Overview](./develop-write-business-logic-overview.md) — In this sub-category, you can learn how to write business logic for a ScalarDL application.
